force-app/main/default/objects/Campaign__c/fields/Total_Agent__c.field-meta.xml
<CustomField>
    <fullName>Total_Agent__c</fullName>
    <label>Total Agent</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>