force-app/main/default/objects/Campaign__c/fields/Total_Call__c.field-meta.xml
<CustomField>
    <fullName>Total_Call__c</fullName>
    <label>Total Call</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>