force-app/main/default/objects/Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Agent__c</columns>
    <columns>Total_Call__c</columns>
    <columns>Total_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>